Fixing alignment of sidebar block list items

--- a/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
@@ -284,6 +284,16 @@ form input.form-submit { /* Forced by Fusion */
   width: 30px;
 }
 
+.block .item-list ul,
+.view .item-list ul {
+  padding: 0;
+}
+
+.block .item-list ul li,
+.view .item-list ul li {
+  list-style-position: inside;
+}
+
 /* User profile about page */
 .view-profile-about-page label {
   font-weight: bold;
